# arithmos-native

./: LICENSE  README.md
.github/workflows/: build-arithmos.yml
arithmos-core/: CMakeLists.txt  README.md
arithmos-core/src/include/: coordinate.h  vector2d.h
arithmos-core/src/include/vectorspaces/: coordinate.h
arithmos-core/src/include/vectorspaces/vector2d/: coordinate.h  vector2d.h
arithmos-core/src/libvector2d/: vector2d_add.c  vector2d_angle.c  vector2d_are_dependent.c  vector2d_are_parallel.c  vector2d_are_perpendicular.c  vector2d_distance.c  vector2d_divide.c  vector2d_dot_product.c  vector2d_extrapolate.c  vector2d_interpolate.c  vector2d_is_dependent.c  vector2d_length.c  vector2d_lerp.c  vector2d_normalize.c  vector2d_polar.c  vector2d_product.c  vector2d_scalar_add.c  vector2d_scalar_divide.c  vector2d_scalar_moduluo.c  vector2d_scalar_multiply.c  vector2d_scalar_subtract.c  vector2d_subtract.c
arithmos-examples/: CMakeLists.txt
arithmos-examples/src/: hello_vector2d.c
helper-scripts/abstract/: abstract-compile-examples.sh  abstract-compile.sh  abstract-upload.sh
helper-scripts/project-impl/: compile-atmega32.sh  compile-atmega328p.sh  compile-examples.sh  upload-to-chip.sh  variables.sh
